# p-less

./: .gitignore  CODE_PLAN.md  LICENSE  PROJECT_ANALYSIS.md  README.md  VERIFICATION_PLAN.md  p_less_examples.ipynb  p_less_samplers.py  pyproject.toml  requirements.txt
configs/: cpu_quick_verify.yaml  full_gpu_eval.yaml
verification/: __init__.py
verification/config/: __init__.py  loader.py  schemas.py
verification/configs/datasets/: cpu_datasets.yaml  gpu_datasets.yaml
verification/configs/experiments/: cpu_step2_gsm8k.yaml  cpu_step3_full.yaml  gpu_step6_search.yaml  gpu_step7_eval.yaml
verification/datasets/: __init__.py  base.py  bfcl.py  csqa.py  gpqa.py  gsm8k.py  humaneval.py  ifeval.py  mbpp.py  qasc.py  registry.py  writing_prompts.py
verification/generation/: __init__.py  engine.py  result.py
verification/outputs/: .gitignore
verification/requirements/: base.txt  cpu.txt  dev.txt  gpu.txt
verification/samplers/: __init__.py  base.py  defaults.py  epsilon.py  eta.py  greedy.py  min_p.py  p_less.py  registry.py  temperature_only.py  top_k.py  top_p.py
verification/scripts/: __init__.py  run_analysis.py  run_cpu_benchmark.py  run_gpu_evaluation.py  run_gpu_search.py  run_math_properties.py
verification/stats/: __init__.py  bootstrap.py  paired_tests.py  reporting.py  tost.py  win_tie_loss.py
verification/storage/: __init__.py  io.py  schema.py
verification/tests/: __init__.py  conftest.py  test_candidate_set_nonempty.py  test_empty_set_rate.py  test_renormalization.py  test_temperature_adaptation.py  test_threshold_bounds.py
(+326 files in other folders)
