[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p-less"
version = "0.1.0"
description = "P-Less Sampling: hyperparameter-free LLM decoding"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
cpu = [
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "pytest>=7.0.0",
    "matplotlib>=3.7.0",
]
gpu = [
    "p-less[cpu]",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.40.0",
    "safetensors>=0.3.0",
]
dev = [
    "p-less[cpu]",
    "ruff>=0.1.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["verification*"]

[tool.pytest.ini_options]
testpaths = ["verification/tests"]
